--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="decoration"></div>
+    <div class="content"><%= yield %></div>
   </body>
 </html>
